# tpi-project-steganography

./: Readme.md
.github/workflows/: publish-algorithms.yml
algorithms/: .gitignore  Readme.md  pyproject.toml  requirements.txt
algorithms/src/: __init__.py  dct.py  lsb.py  metrics.py  spread_spectrum.py
algorithms/src/robustesse/: __init__.py  codec.py  reed_solomon.py  repetition.py
algorithms/tests/: conftest.py  test_dct.py  test_lsb.py  test_metrics.py  test_robustesse.py  test_spread_spectrum.py
service-backend/: .env.example  .gitignore  Readme.md  requirements.txt
service-backend/apps/users/: admin.py  emails.py  models.py  permissions.py  serializers.py  urls.py  views.py
service-backend/apps/users/migrations/: 0001_initial.py
service-backend/apps/users/templates/emails/: otp_code.html
service-backend/config/: urls.py  wsgi.py
service-backend/config/settings/: base.py  development.py  production.py
service-ui/front-end/Image-Authenticator/.local/state/replit/: log-query.db-shm  log-query.db-wal
service-ui/front-end/Image-Authenticator/client/src/: App.tsx  index.css
service-ui/front-end/Image-Authenticator/client/src/components/: Layout.tsx
service-ui/front-end/Image-Authenticator/client/src/components/ui/: accordion.tsx  badge.tsx
service-ui/front-end/Image-Authenticator/client/src/lib/: mockData.ts
service-ui/front-end/Image-Authenticator/client/src/pages/: Auth.tsx  Dashboard.tsx  Verify.tsx
