[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-stegano-tpi"
version = "1.0.0"
description = "Steganography algorithms (LSB, DCT, Spread Spectrum) with optional Reed-Solomon robustness"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "scipy>=1.11",
    "reedsolo>=1.7",
]

# Maps the importable package "tpi_stegano" to the existing "src/" directory.
# Usage in Django:  from tpi_stegano import LSB, DCT, SpreadSpectrum
[tool.setuptools]
packages = ["tpi_stegano", "tpi_stegano.robustesse"]

[tool.setuptools.package-dir]
"tpi_stegano" = "src"
